--- a/html/type-word/index.html
+++ b/html/type-word/index.html
@@ -64,9 +64,12 @@
 	<div style="position: fixed; top:0px; left:0px; width:100vw; height: 100vh; overflow: auto; z-index: 999; background-color: white;" ID="picture_box">
 	</div>
 <div id="ch_hint" style="position:absolute; top:20px; left:20px; background-color: white; border: 1px solid #ccc; padding: 3px; display: none;"></div>
-	<div style="max-height: 250px; display: none; text-align: center;" ID="word_picture_box">
+	<div style="max-height: 250px; display: none; text-align: center; margin-top:18px;" ID="word_picture_box">
 		<img src="" id="word_picture" style="max-height: 250px;">
 	</div>
+
+	<div id="WordSuggestionsForLesson"
+	     style="position: absolute; bottom:0px; left:0px; color:white; background-color: rgba(0,0,0,0.2); right:0px; min-height:30px; padding:10px;overflow-y: hidden; overflow-x: hidden; white-space: nowrap;"></div>
 
 	<div id="WordsForLesson" class="writer"
 	     style="position: absolute; bottom:0px; left:0px; font-size: 64px; color:white; background-color: rgba(0,0,0,0.5); right:0px; min-height:30px; padding:5px;"></div>
