--- a/html/type-word/index.html
+++ b/html/type-word/index.html
@@ -69,10 +69,10 @@
 	</div>
 
 	<div id="WordSuggestionsForLesson"
-	     style="position: absolute; bottom:0px; left:0px; color:white; background-color: rgba(0,0,0,0.2); right:0px; min-height:30px; padding:10px;overflow-y: hidden; overflow-x: hidden; white-space: nowrap;"></div>
+	     style="position: absolute; bottom:0px; left:0px; color:white; background-color: rgba(0,0,0,0.2); right:0px; min-height:30px; padding:10px;overflow-y: hidden; overflow-x: hidden; white-space: nowrap; font-family: hanwangmingboldregular"></div>
 
 	<div id="WordsForLesson" class="writer"
-	     style="position: absolute; bottom:0px; left:0px; font-size: 64px; color:white; background-color: rgba(0,0,0,0.5); right:0px; min-height:30px; padding:5px;"></div>
+	     style="position: absolute; bottom:0px; left:0px; font-size: 64px; color:white; background-color: rgba(0,0,0,0.5); right:0px; min-height:30px; padding:5px; font-family: hanwangmingboldregular"></div>
 	<div id="animation_view"></div>
 	<div id="BeginLesson"
 	     style="position: fixed; right:10px; bottom:10px;  background-color: rgb(255,128,0); color:white; border: 1px solid white; font-size: 20px; padding: 10px; border-radius: 5px; cursor: pointer; z-index: 999;">
