new couting game

--- a/html/keyboard/mini_en_keyboard.html
+++ b/html/keyboard/mini_en_keyboard.html
@@ -61,16 +61,16 @@
 
 		<div class="row">
 			<div class="twelve columns">
-				<button class="keyboard-key" id="key-1" data-mp3="/audio/letters/en/1.wav">1</button>
-				<button class="keyboard-key" id="key-2" data-mp3="/audio/letters/en/iki.mp3">2</button>
-				<button class="keyboard-key" id="key-3" data-mp3="/audio/letters/en/3.wav">3</button>
-				<button class="keyboard-key" id="key-4" data-mp3="/audio/letters/en/4.wav">4</button>
-				<button class="keyboard-key" id="key-5" data-mp3="/audio/letters/en/5.wav">5</button>
-				<button class="keyboard-key" id="key-6" data-mp3="/audio/letters/en/6.wav">6</button>
-				<button class="keyboard-key" id="key-7" data-mp3="/audio/letters/en/7.wav">7</button>
-				<button class="keyboard-key" id="key-8" data-mp3="/audio/letters/en/8.wav">8</button>
-				<button class="keyboard-key" id="key-9" data-mp3="/audio/letters/en/9.wav">9</button>
-				<button class="keyboard-key" id="key-0" data-mp3="/audio/letters/en/0.wav">0</button>
+				<button class="keyboard-key" id="key-1" data-mp3="/audio/letters/en/1.mp3">1</button>
+				<button class="keyboard-key" id="key-2" data-mp3="/audio/letters/en/2.mp3">2</button>
+				<button class="keyboard-key" id="key-3" data-mp3="/audio/letters/en/3.mp3">3</button>
+				<button class="keyboard-key" id="key-4" data-mp3="/audio/letters/en/4.mp3">4</button>
+				<button class="keyboard-key" id="key-5" data-mp3="/audio/letters/en/5.mp3">5</button>
+				<button class="keyboard-key" id="key-6" data-mp3="/audio/letters/en/6.mp3">6</button>
+				<button class="keyboard-key" id="key-7" data-mp3="/audio/letters/en/7.mp3">7</button>
+				<button class="keyboard-key" id="key-8" data-mp3="/audio/letters/en/8.mp3">8</button>
+				<button class="keyboard-key" id="key-9" data-mp3="/audio/letters/en/9.mp3">9</button>
+				<button class="keyboard-key" id="key-0" data-mp3="/audio/letters/en/0.mp3">0</button>
 			</div>
 		</div>
 
