add tracking to typing and flashcards

--- a/html/type-word/index.html
+++ b/html/type-word/index.html
@@ -31,6 +31,8 @@
 
 	<script src="../js/jquery.min.js"></script>
 	<script src="../js/bootstrap.bundle.min.js"></script>
+	<script src="../js/report_ajax.js"></script>
+
 	<script src="type-word.js"></script>
 
 
