--- a/html/flash-cards/index.html
+++ b/html/flash-cards/index.html
@@ -28,6 +28,7 @@
 
 	<script src="../js/jquery.min.js"></script>
 	<script src="../js/bootstrap.bundle.min.js"></script>
+	<script src="../js/report_ajax.js"></script>
 
 	<!--  <script src="words.js"></script>-->
 	<script src="flas-card-engine.js"></script>
