--- a/html/keyboard/mini_ch_keyboard_small.html
+++ b/html/keyboard/mini_ch_keyboard_small.html
@@ -72,6 +72,7 @@
         <button class="keyboard-key" id="key-8" data-mp3="/audio/letters/ch/number_8_ch.mp3">8</button>
         <button class="keyboard-key" id="key-9" data-mp3="/audio/letters/ch/number_9_ch.mp3">9</button>
         <button class="keyboard-key" id="key-0" data-mp3="/audio/letters/ch/number_0_ch.mp3">0</button>
+<button class="keyboard-key backspace-key" id="key-backspace" data-mp3=""><img src="../keyboard/backspace.png" id="backspace_key" style="height:60px;"><span style="display:none">|</span></button>
       </div>
     </div>
 
