--- a/html/keyboard/mini_en_keyboard_medium.html
+++ b/html/keyboard/mini_en_keyboard_medium.html
@@ -71,6 +71,7 @@
 				<button class="keyboard-key" id="key-8" data-mp3="/audio/letters/en/8.mp3">8</button>
 				<button class="keyboard-key" id="key-9" data-mp3="/audio/letters/en/9.mp3">9</button>
 				<button class="keyboard-key" id="key-0" data-mp3="/audio/letters/en/0.mp3">0</button>
+<button class="keyboard-key backspace-key" id="key-backspace" data-mp3=""><img src="../keyboard/backspace.png" id="backspace_key" style="height:60px;"><span style="display:none">|</span></button>
 			</div>
 		</div>
 
