--- a/html/keyboard/index.html
+++ b/html/keyboard/index.html
@@ -68,7 +68,7 @@
                 <button class="keyboard-key" id="key-8" data-mp3="/audio/letters/tr/Default_8.wav">8</button>
                 <button class="keyboard-key" id="key-9" data-mp3="/audio/letters/tr/Default_9.wav">9</button>
                 <button class="keyboard-key" id="key-0" data-mp3="/audio/letters/tr/Default_0.wav">0</button>
-<button class="keyboard-key backspace-key" id="key-backspace" data-mp3=""><img src="../keyboard/backspace.png" id="backspace_key" style="height:60px;"><span style="display:none">|</span></button>
+<button class="keyboard-key backspace-key" id="key-backspace" data-mp3=""><img src="../../pictures/icons/backspace.png" id="backspace_key"><span style="display:none">|</span></button>
             </div>
         </div>
 
