bug fixes, start adding math lessons

--- a/html/opposites/index.html
+++ b/html/opposites/index.html
@@ -31,6 +31,7 @@
 
 	<script src="../js/jquery.min.js"></script>
 	<script src="../js/bootstrap.bundle.min.js"></script>
+	<script src="../js/report_ajax.js"></script>
 	<script src="opposites-engine.js"></script>
 
 
