bug fixes, math

--- a/html/math_one/index.html
+++ b/html/math_one/index.html
@@ -83,39 +83,22 @@
 
 <div id="targetsDiv" style="display: none;">
 	<img src="images/bag.png" alt="target_shot" class="target" />
-	<img src="images/bathtub.png" alt="target_shot" class="target" />
-	<img src="images/bed.png" alt="target_shot" class="target" />
 	<img src="images/bell.png" alt="target_shot" class="target" />
 	<img src="images/bin.png" alt="target_shot" class="target" />
-	<img src="images/building.png" alt="target_shot" class="target" />
-	<img src="images/bunny.png" alt="target_shot" class="target" />
 	<img src="images/cake.png" alt="target_shot" class="target" />
-	<img src="images/cart.png" alt="target_shot" class="target" />
 	<img src="images/cat.png" alt="target_shot" class="target" />
-	<img src="images/coffee.png" alt="target_shot" class="target" />
-	<img src="images/drawer.png" alt="target_shot" class="target" />
 	<img src="images/duck.png" alt="target_shot" class="target" />
-	<img src="images/horse.png" alt="target_shot" class="target" />
-	<img src="images/iron_table.png" alt="target_shot" class="target" />
 	<img src="images/lion.png" alt="target_shot" class="target" />
-	<img src="images/net.png" alt="target_shot" class="target" />
-	<img src="images/owl.png" alt="target_shot" class="target" />
 	<img src="images/penguin.png" alt="target_shot" class="target" />
 	<img src="images/pot.png" alt="target_shot" class="target" />
-	<img src="images/refrigirator.png" alt="target_shot" class="target" />
-	<img src="images/sofa.png" alt="target_shot" class="target" />
-	<img src="images/StandingLamp.png" alt="target_shot" class="target" />
-	<img src="images/table.png" alt="target_shot" class="target" />
-	<img src="images/teddybear.png" alt="target_shot" class="target" />
 	<img src="images/triangle.png" alt="target_shot" class="target" />
 	<img src="images/turtle.png" alt="target_shot" class="target" />
-	<img src="images/tv.png" alt="target_shot" class="target" />
-	<img src="images/wardrobe.png" alt="target_shot" class="target" />
-	<img src="images/washing_machine.png" alt="target_shot" class="target" />
-	<img src="images/wave.png" alt="target_shot" class="target" />
 </div>
 
-<div id="ObjectsContainer" style="position: fixed; top:30px; width: 100%;"></div>
+
+	<div id="MathQuestionDiv" style="position: fixed; left: 10px; top:30px; width: 100%;"></div>
+
+	<div id="ObjectsContainer" style="position: fixed; top:330px; width: 100%;"></div>
 
 
 </div>
