bug fixes, make align for up to 20 better

--- a/html/math_one/index.html
+++ b/html/math_one/index.html
@@ -98,10 +98,10 @@
 
 	<div id="MathQuestionDiv" style="position: fixed; left: 10px; top:30px; width: 100%;"></div>
 
-	<div id="MathAnswersDiv" style="position: fixed; left: 10px; top:300px; width: 100%;"></div>
+	<div id="MathAnswersDiv" style="position: fixed; left: 10px; top:300px; width: 100%; text-align: center;"></div>
 
 </div>
-<div id="bottom-half" style="overflow: hidden; height: 50vh;">
+<div id="bottom-half" style="overflow: hidden; height: 10vh;">
 </div>
 
 <audio preload="none" id="media_audio">
