--- a/html/math_one/index.html
+++ b/html/math_one/index.html
@@ -96,7 +96,7 @@
 </div>
 
 
-	<div id="MathQuestionDiv" style="position: fixed; left: 10px; top:30px; width: 100%;"></div>
+	<div id="MathQuestionDiv" style="position: fixed; left: 10px; top:30px; width: 100%; text-align: center;"></div>
 
 	<div id="MathAnswersDiv" style="position: fixed; left: 10px; top:300px; width: 100%; text-align: center;"></div>
 
