add word sound lesson, optimize javascripts.

--- a/html/alfabe/index_seviye_2.html
+++ b/html/alfabe/index_seviye_2.html
@@ -34,6 +34,7 @@
 	<script src="../js/jquery.min.js"></script>
 	<script src="../js/bootstrap.bundle.min.js"></script>
 	<script src="../js/anime.min.js"></script>
+	<script src="../js/play_sound.js"></script>
 	<script src="alfabe_seviye_2.js"></script>
 
 	<!-- Insert this line after script imports -->
