--- a/html/counting/index.html
+++ b/html/counting/index.html
@@ -20,9 +20,6 @@
     }
 	</style>
 
-	<script>
-	</script>
-
 	<!-- Insert this line above script imports  -->
 	<script>if (typeof module === 'object') {
 		window.module = module;
@@ -31,6 +28,7 @@
 
 	<script src="../js/jquery.min.js"></script>
 	<script src="../js/bootstrap.bundle.min.js"></script>
+	<script src="../js/play_sound.js"></script>
 	<script src="counting.js"></script>
 
 
