--- a/html/memory-game/index.html
+++ b/html/memory-game/index.html
@@ -31,6 +31,7 @@
 	<script src="../js/jquery.min.js"></script>
 	<script src="../js/bootstrap.bundle.min.js"></script>
 	<script src="../js/anime.min.js"></script>
+	<script src="../js/play_sound.js"></script>
 	<script src="memory-game.js"></script>
 
 
