--- a/html/alfabe/index.html
+++ b/html/alfabe/index.html
@@ -27,6 +27,7 @@
 	<script src="vendor/jquery/jquery.min.js"></script>
 	<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 	<script src="anime.min.js"></script>
+	<script src="../js/play_sound.js"></script>
 	<script src="alfabe_data.js"></script>
 	<script src="alfabe.js"></script>
 
