--- a/html/fans/index.html
+++ b/html/fans/index.html
@@ -32,6 +32,7 @@
 
     <script src="../js/jquery.min.js"></script>
     <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="../js/play_sound.js"></script>
     <script src="fans.js"></script>
 
     <!-- Insert this line after script imports -->
