--- a/html/type-word/index.html
+++ b/html/type-word/index.html
@@ -32,6 +32,7 @@
 	<script src="../js/jquery.min.js"></script>
 	<script src="../js/bootstrap.bundle.min.js"></script>
 	<script src="../js/report_ajax.js"></script>
+	<script src="../js/play_sound.js"></script>
 
 	<script src="type-word.js"></script>
 
