--- a/html/story-time/index.html
+++ b/html/story-time/index.html
@@ -32,6 +32,7 @@
 	<script src="../js/jquery.min.js"></script>
 	<script src="../js/bootstrap.bundle.min.js"></script>
 	<script src="../js/report_ajax.js"></script>
+	<script src="../js/play_sound.js"></script>
 
 	<script src="story-time.js"></script>
 
@@ -73,6 +74,16 @@
 			<div class="col-6 text-left">
 				<h2 id="story_title"></h2>
 				<div id="story_text" style="font-size: 18px;"></div>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-4">
+				<img src="" id="question_picture" style="max-height: 250px;">
+			</div>
+			<div class="col-6 text-left">
+				<h2 id="question_title"></h2>
+				<div id="question_answers" style="font-size: 18px;"></div>
 			</div>
 		</div>
 
