new type talk and story time

--- a/html/keyboard/mini_ch_keyboard_large.html
+++ b/html/keyboard/mini_ch_keyboard_large.html
@@ -3,12 +3,12 @@
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/skeleton.css">
   <link rel="stylesheet" href="../css/custom_ch_large.css">
-	<style>
-    @font-face {
-      font-family: 'hanwangmingboldregular';
-      src: url('../font/wp010-08.ttf') format('truetype');
-    }
-	</style>
+<!--	<style>-->
+<!--    @font-face {-->
+<!--      font-family: 'hanwangmingboldregular';-->
+<!--      src: url('../font/wp010-08.ttf') format('truetype');-->
+<!--    }-->
+<!--	</style>-->
 
   <script src="../keyboard/talking_keyboard.js"></script>
 
