--- a/html/type-talk/index.html
+++ b/html/type-talk/index.html
@@ -16,12 +16,12 @@
 	<link href="../css/balloons.css" rel="stylesheet">
 	<link href="../css/type-talk.css" rel="stylesheet">
 
-	<style>
-		@font-face {
-			font-family: 'hanwangmingboldregular';
-			src: url('../font/wp010-08.ttf') format('truetype');
-		}
-	</style>
+<!--	<style>-->
+<!--		@font-face {-->
+<!--			font-family: 'hanwangmingboldregular';-->
+<!--			src: url('../font/wp010-08.ttf') format('truetype');-->
+<!--		}-->
+<!--	</style>-->
 
 	<!-- Insert this line above script imports  -->
 	<script>if (typeof module === 'object') {
